# solarance-beginnings

./: .gitignore  CHANGELOG-v0.3.0.md  CLAUDE.md  CONTEXT.md  Core Gameplay Loops.md  Introduction.md  README.md  RLS Visualization.canvas  Solarance - Beginnings Game Design Doc.md  Solarance - Beginnings.md  Taskfile.yml  db_flow.md
.obsidian/: app.json  (+4 more)
client/: .env  .env.template  Cargo.toml  Taskfile.yml
client/assets/ships/: ship_manifest.yaml
client/assets/ships/lc/: Column.aseprite
client/examples/: star_system_test.rs
client/src/: gameplay.rs  lib.rs  login.rs  main.rs  oidc_auth_helper.rs  shader.rs  starfield.glsl  stdb.rs  stdb_client_helper.rs
client/src/gameplay/: chat.rs  debug.rs  direct_server_messages.rs  gui.rs  player.rs  render.rs  resources.rs  server_messages.rs  state.rs  visual_effects.rs
client/src/gameplay/gui/: asset_utils.rs  assets_window.rs  chat.rs  chat_widget.rs  construction_window.rs  creation_window.rs  debug.rs  debug_widget.rs  faction_window.rs  map_window.rs  menu_bar.rs  menu_bar_widget.rs  minimap_widget.rs  out_of_play_screen.rs  ship_details.rs  ship_details_window.rs  status.rs  status_widget.rs  welcome_back_widget.rs
client/src/gameplay/render/: in_sector.rs  star_system.rs
client/src/module_bindings/: add_person_reducer.rs  asteroid_table.rs  asteroid_type.rs  connection_table.rs  connection_type.rs  create_stellar_object_random_reducer.rs  create_stellar_object_reducer.rs  is_server_or_owner_reducer.rs  map_view_type.rs  mod.rs  move_ships_reducer.rs  move_ships_timer_table.rs  move_ships_timer_type.rs  person_table.rs  person_type.rs  player_table.rs  player_type.rs  resource_type_type.rs  say_hello_reducer.rs  sector_location_table.rs  sector_location_type.rs  sector_type.rs  server_only_reducer.rs  set_map_view_reducer.rs  ship_class_type.rs  ship_table.rs  ship_type.rs  stellar_object_hi_res_table.rs  stellar_object_internal_table.rs  stellar_object_kinds_type.rs  stellar_object_low_res_table.rs  stellar_object_table.rs  stellar_object_transform_type.rs  stellar_object_type.rs  stellar_object_velocity_table.rs  stellar_position_type.rs  stellar_transform_type.rs  try_server_only_reducer.rs  update_object_transform_reducer.rs  update_position_timer_type.rs  (+4 more)
client/src/server/: impls.rs  mod.rs
client/src/stdb/: connector.rs  impls.rs  mod.rs  stdsl_id_impls.rs  stdsl_id_impls.txt  stdsl_sed_script.txt  utils.rs
client/src/stdb/connector/: subscriptions.rs
server/: Cargo.toml  Taskfile.yml
server/src/: README.md  lib.rs  timers.rs  utility.rs
server/src/admin/: cargo.rs  construction.rs  creation.rs  messages.rs  mod.rs
server/src/definitions/: factions.rs  galaxy.rs  item_types.rs  mod.rs  ship_types.rs  station_module_types.rs
server/src/lifecycle/: client_connected.rs  client_disconnected.rs  init.rs  mod.rs  timers.rs
server/src/logic/: README  README.md  cargo_crates.rs  chat_messages.rs  mod.rs
server/src/schedulers/: stellarobject_timers.rs
server/src/tables/: asteroids.rs  chats.rs  combat.rs  common_types.rs  economy.rs  factions.rs  global_config.rs  items.rs  jumpgates.rs  messages.rs  mod.rs  npcs.rs  players.rs  sectors.rs  server_messages.rs  ships.rs  star_system.rs  stations.rs  stellarobjects.rs
server/src/types/: README.md  asteroids.rs  auth.rs  chats.rs  combat.rs  common.rs  economy.rs  factions.rs  items.rs  jumpgates.rs  mod.rs  npcs.rs  players.rs  sector.rs  sectors.rs  server_messages.rs  ships.rs  stations.rs  stellarobjects.rs  utility.rs
solarance-shared/: Cargo.toml  README.md
solarance-shared/docs/handoff/: README.md  dead-reckoning-movement.md  transform-table-migration.md  view-functions-visibility.md
solarance-shared/src/: lib.rs
solarance-shared/src/physics/: mod.rs  tests.rs
(+455 files in other folders)
