[package]
name = "solarance_simple_test"
version = "0.1.0"
edition = "2021"
authors = ["Karl Nyborg"]
rust-version = "1.86.0"

[dependencies]
egui = "0.21.0"
egui-macroquad = "0.15.0"
egui_demo_lib = "0.21.0"
macroquad = "0.3.26"
once_cell = "1.21.3"
rayon = { version = "1.10.0", optional = true }
secs = { git = "https://github.com/wick3dr0se/secs", version = "0.1.0" }
spacetimedb-sdk = "1.1.1"

[features]
multithreaded = ["rayon"]

[package.metadata.rust-analyzer]
# Enable experimental features in rust-analyzer
rustc_private = true
