[package]
name = "solarance-beginnings"
version = "0.1.0"
edition = "2021"
authors = ["Karl Nyborg"]
rust-version = "1.86.0"

[dependencies]
async-executor = "1.13.2"
dotenv = "0.15.0"
egui = "0.21.0"
egui-macroquad = "0.15.0"
futures-lite = "2.6.0"
lazy_static = "1.5.0"
macroquad = "0.3.26"
open = "5.3.2"
openidconnect = { version = "4.0.0", features = ["reqwest-blocking"]}
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"], default-features = false }
spacetimedb-sdk = "1.1.1"
url = "2.5.4"

[features]

[package.metadata.rust-analyzer]
# Enable experimental features in rust-analyzer
rustc_private = true
