[package]
name = "solarance-spacetime-module"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version="1.1.1", features = ["unstable"]}
log = "0.4"
glam = "0.30.2"
spacetimedsl = "0.5.0"
