[package]
name = "solarance-spacetime-module"
description = "A Server for Top-Down 2D Living Universe Sci-Fi Space MMO"
homepage = "http://www.solarance-beginnings.com/"
repository = "https://github.com/GalaxyCr8r/solarance-beginnings"
version = "0.3.0"
edition = "2021"
authors = ["Karl Nyborg"]

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version="1.2.0", features = ["unstable"]}
log = "0.4"
glam = "0.30.2"
spacetimedsl = "0.8.1"
