[package]
name = "solarance-spacetime-module"
description = "A Server for Top-Down 2D Living Universe Sci-Fi Space MMO"
homepage = "http://www.solarance-beginnings.com/"
repository = "https://github.com/GalaxyCr8r/solarance-beginnings"
version = "0.8.0-dev"
edition = "2021"
authors = ["Karl Nyborg"]

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = { version = "2.6.0" }
spacetimedsl = "0.21.1"
log = "0.4"
glam = "0.30.2"
solarance-shared = { path = "../solarance-shared", features = ["server"] }
