[package]
name = "solarance-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
# Optional: only the server module needs the `SpacetimeType` derives so these
# types can live in tables. Native clients must NOT enable this feature —
# the `spacetimedb` module crate's host imports (console_log, bytes_sink_write,
# ...) only exist inside the SpacetimeDB WASM runtime, and pulling them into a
# native binary fails to link on MSVC (LNK2019 unresolved externals).
spacetimedb = { version = "2.6.0", optional = true }
glam = "0.30.2"

[features]
spacetimedb = ["dep:spacetimedb"]
